--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ requires-python = ">=3.13"
 dependencies = [
     "pydantic (>=2.11.7,<3.0.0)",
     "fastapi[standard] (>=0.116.1,<0.117.0)",
-    "fastapi-cli (>=0.0.8,<0.0.9)"
+    "fastapi-cli (>=0.0.8,<0.0.9)",
+    "bcrypt (>=4.3.0,<5.0.0)",
+    "sqlmodel (>=0.0.24,<0.0.25)",
 ]
 
 
