--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,16 @@ dependencies = [
     "bcrypt (>=4.3.0,<5.0.0)",
     "sqlmodel (>=0.0.24,<0.0.25)",
     "aiosqlite (>=0.21.0,<0.22.0)",
+    "pydantic-settings (>=2.10.1,<3.0.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "pytest (>=8.4.1,<9.0.0)",
+    "httpx (>=0.28.1,<0.29.0)",
+    "pytest-asyncio (>=1.0.0,<2.0.0)",
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+[tool.pytest.ini_options]
+pythonpath = "."
